# automatic-octo-parakeet

./: 1python  README.md  metadata.json  narration.txt  pyproject.toml  test_corporate.py  test_navigation_past.py
New_data/: Trip1.json  Trip1.md  generated_trip_long_template.json  realistic_trip_data.json
samples/: anomaly_notes.md  sample_trip.json
trip_verbalizer/: __init__.py  config.py  config.yaml  events.py  geo.py  http_utils.py  llm_client.py  main.py  models.py  pipeline.py  prompt_builder.py  requirements.txt  spatial.py  temporal.py
trip_verbalizer/utils/: __init__.py  helpers.py
