[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-verbalizer"
version = "1.0.0"
description = "Vehicle telematics to natural language narration pipeline"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Trip Verbalizer Team"}
]
keywords = [
    "telematics",
    "vehicle",
    "trip",
    "narration",
    "llm",
    "geospatial",
    "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "certifi>=2023.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "geopy>=2.4.0",
    "shapely>=2.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.19.0",
    "diskcache>=5.6.0",
    "aiolimiter>=1.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
trip-verbalizer = "trip_verbalizer.main:main"

[project.urls]
Homepage = "https://github.com/trip-verbalizer"
Documentation = "https://github.com/trip-verbalizer/docs"
Repository = "https://github.com/trip-verbalizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["trip_verbalizer*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=trip_verbalizer --cov-report=term-missing"
